unified fonts, fixed gallery corners on small devices, added build folder

--- a/src/scss/index.css
+++ b/src/scss/index.css
@@ -1,37 +1,3 @@
-                        /* Calibre fonts */
-
-/* Calibre Regular */
-@font-face {
-  font-family: 'MyFont';
-  src: url('./calibre-font/Calibre Regular.otf') format('otf');
-  font-style: normal;
-  font-weight: 400;
-}
-
-/* Calibre Medium */
-@font-face {
-  font-family: 'MyFont';
-  src: url('./calibre-font/Calibre Medium.otf') format('otf');
-  font-style: normal;
-  font-weight: 500;
-}
-
-/* Calibre Semibold */
-@font-face {
-  font-family: 'MyFont';
-  src: url('./calibre-font/Calibre Semibold.otf') format('otf');
-  font-style: normal;
-  font-weight: 600;
-}
-
-/* Calibre Semibold Italic */
-@font-face {
-  font-family: 'MyFont';
-  src: url('./calibre-font/Calibre Semibold Italic.otf') format('otf');
-  font-style: italic;
-  font-weight: 600;
-}
-
                         /* basic styles */
 
 /* box-sizing for all elements in html */
@@ -47,7 +13,7 @@ html, * {
 body {
   margin: 0;
   padding: 0;
-  font-family: "MyFont" !important, -apple-system, "Roboto", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   scroll-behavior: smooth;
