--- a/src/scss/stylesheet.scss
+++ b/src/scss/stylesheet.scss
@@ -50,7 +50,8 @@ body.cerem-bg {
       animation: scale 1s;
     }
 
-    .carousel-inner {
+    .carousel-inner,
+    .d-block {
       border-radius: 20px;
       transition: all 0.1s;
       box-shadow: 0px 0px 36px 18px $shadowBlack;
